# python-project-template

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline.json  AGENTS.md  CHANGELOG.md  README.md  definitions.py  generate_project_badges.py  pyproject.toml  tox.ini
.agents/skills/code-summary/: SKILL.md
.agents/skills/prepare-for-pr/: SKILL.md
.agents/summary/: product.md  structure.md  tech.md
.git-hooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: main.yml  tag_and_release.yml  test.yml
projectname/: run_project.py
src/: run_project.py
tests/: generate_project_badges.py
tests/functional/: test_functional.py
tests/unit/: test_run_project.py
